...
    },
    "serverForm.placeholder.host" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Host"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Host"
...
    },
    "serverForm.transport.http" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HTTP"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HTTP"
...
    },
    "serverForm.transport.https" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HTTPS"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "HTTPS"
...
